sort.basic.bubble.AlgBubbleSort1.scala.error
Compilation error:
AlgBubbleSort1:12: error: Unmatched closing brace '}' ignored here
          }
          ^AlgBubbleSort1:13: error: ')' expected but '}' found.
          }
          ^